Paring down dialog.mustache template

--- a/template/dialog.mustache
+++ b/template/dialog.mustache
@@ -1,8 +1,6 @@
-<div class="popup {{dialogType}}{{#classes}} {{.}}{{/classes}}{{^buttons}} no-buttons{{/buttons}}{{^title}} no-title{{/title}}{{#fullBleed}} full-bleed{{/fullBleed}}">
-  <div class="popup-inner-wrap">
-
+<div class="{{dialogType}}{{^buttons}} no-buttons{{/buttons}}{{^title}} no-title{{/title}}{{#containerClasses}} {{.}}{{/containerClasses}}">
     {{#toolbar}}
-    <div class="{{#layover}}toolbar{{/layover}}{{^layover}}popup-header{{/layover}}">
+    <header class="{{#classes}} {{.}}{{/classes}}">
       <div class="header">{{{title}}}</div>
       {{^hideClose}}
       <a class="header-action close right js-close{{^layover}} popup-close{{/layover}}">
@@ -12,7 +10,7 @@
       {{#layover}}
       {{#button}}{{> button}}{{/button}}
       {{/layover}}
-    </div>
+    </header>
     {{/toolbar}}
 
     <div class="popup-content{{#toolbar}} has-toolbar{{/toolbar}}">
@@ -28,10 +26,4 @@
     {{#layover}}
   </div>
   {{/layover}}
-
-  </div>{{! popup-inner-wrap}}
 </div>
-
-{{#blocking}}
-<div class="blocking-div"></div>
-{{/blocking}}
